--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -52,7 +52,7 @@
             android:layout_marginTop="10dp"
             android:textSize="20sp"
             android:ems="10"
-            android:inputType="text"
+            android:inputType="textPassword"
             />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -87,7 +87,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Already have an account? Sign in"
+        android:text="Already have an account? Login"
         android:layout_marginTop="20dp"
         android:textSize="22sp"
         android:id="@+id/signinTxt"/>
