--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,14 +20,15 @@
 
     <GridLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="400dp"
         android:layout_below="@+id/welcome"
         android:rowCount="2"
         android:columnCount="2"
-        android:layout_margin="20dp">
+        android:layout_marginTop="100dp">
 
         <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
+            android:id="@+id/location"
             android:layout_height="wrap_content"
             android:layout_row="0"
             android:layout_column="0"
@@ -60,6 +61,7 @@
 
         <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
+            android:id="@+id/weather"
             android:layout_height="wrap_content"
             android:layout_row="0"
             android:layout_column="1"
@@ -83,7 +85,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Search Location"
+                    android:text="Get Weather"
                     android:textStyle="bold"
                     android:layout_marginTop="12dp"
                     android:textAlignment="center"/>
@@ -95,6 +97,38 @@
             android:layout_height="wrap_content"
             android:layout_row="1"
             android:layout_column="0"
+            android:layout_gravity="fill"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            android:layout_margin="8dp"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="8dp">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:gravity="center"
+                android:layout_gravity="center_vertical|center_horizontal">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/search" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="About"
+                    android:textStyle="bold"
+                    android:layout_marginTop="12dp"
+                    android:textAlignment="center"/>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_row="1"
+            android:layout_column="1"
             android:layout_gravity="fill"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
