--- a/app/src/main/res/menu/weather_menu.xml
+++ b/app/src/main/res/menu/weather_menu.xml
@@ -2,9 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/logout"
-        android:title="Logout">
+       android:id="@+id/share"
+        android:title="share weather">
     </item>
-
 
 </menu>
