--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -53,19 +53,28 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
-                    android:layout_marginTop="15dp"
+                    android:layout_marginTop="10dp"
                     android:hint="Password"
                     android:id="@+id/password_signin"
                     android:inputType="textPassword"
                     android:textSize="20sp" />
             </com.google.android.material.textfield.TextInputLayout>
 
+            <ProgressBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                style="@android:style/Widget.Material.ProgressBar.Large"
+                android:id="@+id/progressBar"
+                android:layout_gravity="center"
+                android:layout_marginTop="-80dp"
+                android:visibility="gone" />
+
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:textSize="20sp"
                 android:background="@drawable/button_rounded"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="20dp"
                 android:id="@+id/login"
                 android:text="Login" />
 
@@ -73,23 +82,24 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Or click here to use fingerprint"
-                android:layout_marginTop="20dp"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginTop="15dp"
                 android:textSize="22sp"
                 android:id="@+id/authStatus"/>
 
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="15dp"
                 android:src="@drawable/ic_baseline_fingerprint_24"
                 android:id="@+id/fingerAuth" />
-
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginHorizontal="10dp"
                 android:text="Don't have an account? Sign up"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="10dp"
                 android:textSize="22sp"
                 android:id="@+id/signupTxt"/>
 
