--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -33,7 +33,7 @@
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Full name"
-                   android:id="@+id/NameReg"
+                   android:id="@+id/nameReg"
                    android:textSize="20sp"
                    android:layout_marginTop="20dp"
                    android:ems="10"
@@ -75,22 +75,14 @@
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>
 
-<!--           <com.google.android.material.textfield.TextInputLayout-->
-<!--               android:layout_width="match_parent"-->
-<!--               android:layout_height="wrap_content"-->
-<!--               android:focusable="true"-->
-<!--               android:focusableInTouchMode="true"-->
-<!--               app:passwordToggleEnabled="true">-->
-
-<!--               <EditText-->
-<!--                   android:layout_width="match_parent"-->
-<!--                   android:layout_height="wrap_content"-->
-<!--                   android:hint="Confirm Password"-->
-<!--                   android:layout_marginTop="10dp"-->
-<!--                   android:textSize="20sp"-->
-<!--                   android:ems="10"-->
-<!--                   android:inputType="textPassword" />-->
-<!--           </com.google.android.material.textfield.TextInputLayout>-->
+           <ProgressBar
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               style="@android:style/Widget.Material.ProgressBar.Large"
+               android:id="@+id/progressBar"
+               android:layout_gravity="center"
+               android:layout_marginTop="-80dp"
+               android:visibility="gone" />
 
            <Button
                android:layout_width="match_parent"
@@ -105,6 +97,7 @@
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Already have an account? Login"
+               android:layout_marginHorizontal="5dp"
                android:layout_marginTop="20dp"
                android:textSize="22sp"
                android:id="@+id/signinTxt"/>
